--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?bdsbspc#1" target="_blank">首页</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/1?hdqwslc" target="_blank">动态网</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/2?gzpwouvq" target="_blank">大纪元</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/4?cfioklhz" target="_blank">看中国</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/pHh5q?qdntda" target="_blank">新生网</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/tktpt?malepb" target="_blank">阿波罗网</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/Mjpvu?dhnudc" target="_blank">干净世界</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/10?uximda" target="_blank">退党服务</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/Rffqf?subhcxtg" target="_blank">明慧广播</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/nw9Vn?jomecqbi" target="_blank">传奇时代</a> | <a href="https://dfxrfb9070id6.cloudfront.net/AF9AG?gtopd" target="_blank">新境界影视</a> | <a href="https://d1jex6syje0yji.cloudfront.net/zqMQA?yijui" target="_blank">文昭谈论</a> | <a href="https://dld25pfif4r64.cloudfront.net/7?mehufix" target="_blank">明慧</a></p><p><a href="https://d3abchfok6e2j.cloudfront.net/9?gicig" target="_blank">大法</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/3?vylarmu" target="_blank">新唐人</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/obAhT?spwvhgl" target="_blank">人民报</a> | <a href="https://dfxrfb9070id6.cloudfront.net/xXNHu?krrngx" target="_blank">放光明</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/5?zrdida" target="_blank">新纪元</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/6?guydbbxst" target="_blank">希望之声</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/11?ppfbn" target="_blank">无界网络</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/Pueji?tpndguomy" target="_blank">追查国际</a> | <a href="https://dme0bxbvomkno.cloudfront.net/16?rszurgntr" target="_blank">明慧之窗</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/LdvzZ?adstysqx" target="_blank">细语人生</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/fBn3r?pkdhvpfb" target="_blank">新世纪影视</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/PUWMb?frsbyf" target="_blank">江峰时刻</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/8?erynsiyw" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391062.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391067-GettyImages-1086028838-320x200.jpg"><p align="center">大陆车检强制报废车辆 律师：损害百姓利益</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?yqbbx#1" target="_blank">首页</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/1?nnjpjywrj" target="_blank">动态网</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/2?qwrlpvb" target="_blank">大纪元</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/4?mveufte" target="_blank">看中国</a> | <a href="https://dcz6rimunj42y.cloudfront.net/pHh5q?ksjcgkelw" target="_blank">新生网</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/tktpt?pzees" target="_blank">阿波罗网</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/Mjpvu?cnxncpgww" target="_blank">干净世界</a> | <a href="https://d14a0yccee2yym.cloudfront.net/10?yvzmh" target="_blank">退党服务</a> | <a href="https://d21y52w6f35pla.cloudfront.net/Rffqf?cwpde" target="_blank">明慧广播</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/nw9Vn?lpagtow" target="_blank">传奇时代</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/AF9AG?jkohclnb" target="_blank">新境界影视</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/zqMQA?ceotxze" target="_blank">文昭谈论</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/7?csivpi" target="_blank">明慧</a></p><p><a href="https://d2wjsqtecmbuag.cloudfront.net/9?hxymk" target="_blank">大法</a> | <a href="https://d3siwajeg0khti.cloudfront.net/3?updfyn" target="_blank">新唐人</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/obAhT?veyreoqrr" target="_blank">人民报</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/xXNHu?yxabdu" target="_blank">放光明</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/5?dfcbhjpmz" target="_blank">新纪元</a> | <a href="https://dl1ez95kskssm.cloudfront.net/6?uphiwp" target="_blank">希望之声</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/11?ricpv" target="_blank">无界网络</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/Pueji?lhxod" target="_blank">追查国际</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/16?zfwrxatf" target="_blank">明慧之窗</a> | <a href="https://d21y52w6f35pla.cloudfront.net/LdvzZ?owpdgkkqh" target="_blank">细语人生</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/fBn3r?vznskvrc" target="_blank">新世纪影视</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/PUWMb?gyglloc" target="_blank">江峰时刻</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/8?mpmgyyza" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391287.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391338-28cd2d838de93ae7966fd96ce5dea67e-320x200.png"><p align="center">深圳爆炸堕亡女子告别式取消 市民挂横幅悼念</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391287.md#1" title="深圳爆炸堕亡女子告别式取消 市民挂横幅悼念""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391338-28cd2d838de93ae7966fd96ce5dea67e-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391062.md#1" title="大陆车检强制报废车辆 律师：损害百姓利益""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391067-GettyImages-1086028838-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391140.md#1" title="【菁英论坛】崩溃亡党在即 刘源绝望上书""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391149-87c1ab7095d6aea73f851779-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391113.md#1" title="纽约新泽西频现神秘无人机 事态发展一文看懂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389485-179281-320x200.jpg">&nbsp;</a>
@@ -11,25 +12,23 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390947.md#1" title="上海访民集体进京遭遣返 顾国平曝被警察虐待""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/10/id13852427-36-200RG2095E93-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1" title="极越汽车大裁员 中国电动车洗牌风暴来临？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14287715-GettyImages-2147871369-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390865.md#1" title="韩国会表决通过弹劾尹锡悦总统动议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390970-GettyImages-2189170105-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390929.md#1" title="美加联手投资开发北美钨矿 抗衡中共垄断""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/05/id13731077-GettyImages-893465210-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391329.md#1">乌克兰军方情报部门对援俄朝鲜士兵招降</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391287.md#1">深圳爆炸堕亡女子告别式取消 市民挂横幅悼念</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391351.md#1">MANGO创始人意外身亡 净资产45亿美元</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391287.md#1">深圳爆炸堕亡女子告别式取消 市民挂横幅悼念</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391276.md#1">中共悄然拆除乌鲁木齐市地标热比娅大厦</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391329.md#1">乌克兰军方情报部门对援俄朝鲜士兵招降</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391137.md#1">沈舟：中共未宣布的军演泄露低端攻台计划</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391271.md#1">【翻墙必看】中国“果中贵族”价格大跳水</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391266.md#1">湖南大三女生失踪多日后遗体被发现 带瘀伤</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391206.md#1">圆通快递装车工在高温车厢晕倒 因热射病去世</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388779.md#1">美国安局为何建议每周关手机一次 原因想不到</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391236.md#1">试图翻越白宫附近的围栏 一男子被捕</a><br>
-:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391161.md#1">中国白酒市场内卷 经销商“开门红”政策生变</a><br>
-:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391207.md#1">英国安德鲁王子的中国商业伙伴真实身份曝光</a><br>
+:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391266.md#1">湖南大三女生失踪多日后遗体被发现 带瘀伤</a><br>
+:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391206.md#1">圆通快递装车工在高温车厢晕倒 因热射病去世</a><br>
+:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388779.md#1">美国安局为何建议每周关手机一次 原因想不到</a><br>
+:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391236.md#1">试图翻越白宫附近的围栏 一男子被捕</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390342.md#1">北京全面推个人养老金  专家：又一次盘剥</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390451.md#1">前山西首富1.1亿资产被英国正式没收</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390180.md#1">北京中央经济会称稳房市股市 股市开盘即跌</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14387027.md#1">停课、隔离 大陆多地学校集体爆发水痘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390626.md#1">英意日成立联合隐形战机公司 有三个原因</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390106.md#1">中国男子足球队原主教练李铁获刑20年</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14387027.md#1">停课、隔离 大陆多地学校集体爆发水痘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390138.md#1">【翻墙必看】中共海关总署署长自杀 谜团重重</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390108.md#1">中共拟让人民币贬值抗关税？纳瓦罗发警告</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390869.md#1">美驻华大使人权日声明遭中共删除 引热议</a><br>
@@ -54,12 +53,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391101.md#1">F-35战机穿透伊朗防空 凸显高级别战斗能力</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391271.md#1">【翻墙必看】中国“果中贵族”价格大跳水</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391287.md#1">深圳爆炸堕亡女子告别式取消 市民挂横幅悼念</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391276.md#1">中共悄然拆除乌鲁木齐市地标热比娅大厦</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391266.md#1">湖南大三女生失踪多日后遗体被发现 带瘀伤</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391169.md#1">大陆进口车厘子断崖式降价 预计还会再降</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391206.md#1">圆通快递装车工在高温车厢晕倒 因热射病去世</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391159.md#1">大连地铁3号线起火 大连站停运 黑烟滚滚</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391062.md#1">大陆车检强制报废车辆 律师：损害百姓利益</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390982.md#1">明慧评论：中共在美国搞法律战能得逞吗？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391136.md#1">曾赴中国拍戏 王耿豪爆返台关键：被逼政治表态</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391111.md#1">富二代何超莲砸1亿拍电影 首日预售票房仅16万</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391115.md#1">中共出台新财政货币政策 分析：于事无补</a><br>
@@ -108,13 +107,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388441.md#1">美国务院：对不公正拘留行为全球追责</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388204.md#1">遭冤刑近二十年 三位法轮功学员的遭遇</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387857.md#1">【净园财经】人民币汇率背后的操盘手</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d26irpgln9f1cp.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d26irpgln9f1cp.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,074</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dqjefgy3jec25.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dqjefgy3jec25.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,074</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 440,171,031 人
+!共 440,171,651 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390835.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2010/06/100613012734228-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390835.md#1">人权律师促北京当局撤回终止涉外收养决定</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389683.md#1">遭骚扰失工作 湖北异议人士：中共逼人上绝路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388646.md#1">世界人权日 大陆访民曝长期被迫害毫无人权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388420.md#1">国际人权日 加拿大制裁8名中共高官</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388333.md#1">上海静安区访民遭黑监狱折磨 公安不立案</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388037.md#1">迎国际人权日 洛城集会抗议中共迫害人权</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390734.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/09/id14340256-GettyImages-479864820-1080x720-1-320x200.webp"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390734.md#1">脱钩持续 美中国债收益率差距达十年来最大</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390048.md#1">白领工作难找 中国年轻人热衷考导游证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390044.md#1">经济不景疯买黄金 中国人遭骗子洗钱者诈骗</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390087.md#1">李嘉诚再度抛售中国邮储银行2082万H股</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389388.md#1">价格击穿成本价 中国光伏业陷“自杀式”内卷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389902.md#1">极越汽车突然解散 员工社保断缴 CEO被围堵</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390993.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390995-b7d6b66cc8c0e60d5658da24e0d01269-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390993.md#1">前“美女书记”林虹被查 曾直播带货引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390980.md#1">北约秘书长指中共霸凌 台外交部：合作捍卫和平</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390846.md#1">青海省一周七高官落马 赵乐际心腹被起诉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390816.md#1">台外长：台美关系稳健发展 盼继续深化交流</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390792.md#1">阿萨德迅速垮台 中共专家对叙利亚评论被打脸</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390798.md#1">美国上诉法院驳回TikTok暂停禁令请求</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390749.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390837-li-xinxin-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390749.md#1">家中书房起火被困 大陆37岁主持人李昕鑫离世</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390359.md#1">吉林一烤肉店爆炸 建筑碎片被炸飞 至少13人伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389685.md#1">湖北荆州大型无人机坠毁 现场浓烟滚滚</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389622.md#1">四川3人过斑马线 被飞驰的私家车撞飞毙命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389419.md#1">深圳豪宅楼爆炸 多楼层过火 更多细节流出</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389009.md#1">深圳湾一豪宅发生爆炸 目击者称有人跳楼</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391158.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391168-bf4f265777f52a957634288f39666071-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391158.md#1">贾跃亭自爆偿债经历：法院连家中袜子都清点过</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391122.md#1">安徽地下代孕机构曝光 供卵者涉北大清华女生</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1">厦门大学女生遭霸凌受重伤 学生拟游行维权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390884.md#1">重庆夫妻吵架 丈夫往窗外扔刀 外卖员被砸伤住院</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390845.md#1">南京大屠杀纪念日 中国逾半日本人学校停课</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390832.md#1">三退声明精选（2024/12/13）</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/04/id14222084-annie-yi-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1">56岁伊能静大方认老 自拍戴老花镜补妆获赞</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384614.md#1">影响几世代 琼瑶影视剧那些年捧红的女星</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383548.md#1">【一线采访】学生跳楼频发 武汉多区取消期中考</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/11/30/n14382096.md#1">分析：为何华为手机Mate 70竞争力走衰</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14377270.md#1">考研人数暴跌 折射中国大学生心态何种转折</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375908.md#1">87版《红楼梦》“鸳鸯”扮演者郑铮病逝</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385852.md#1">【独家】二十大前习亲定攻击法轮功新战略</a><br>
